# TheDrumGizmoExp

./: .clang-tidy  .coverage-thresholds.json  .gitignore  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README  RELEASE-CHECKLIST  agents.md  aligned_buffer.h.gcov  alloc_traits.h.gcov  allocated_ptr.h.gcov  allocator.h.gcov  atomic.gcov  atomic_base.h.gcov  audiocache.cc.gcov  audiocacheeventhandler.cc.gcov  audiocacheidmanager.h.gcov  autogen.sh  basic_string.h.gcov  c++config.h.gcov  char_traits.h.gcov  configure.ac  coverage-drumgizmo.json  gthr-default.h.gcov  libsmf-dev_1.3-4.1build2_amd64.deb  list.tcc.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  readme.md  sonar-project.properties  std_mutex.h.gcov  stl_algobase.h.gcov  stl_construct.h.gcov  stl_iterator.h.gcov  stl_list.h.gcov  stl_map.h.gcov  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  opencode.yml
build-cmake-ci/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  drumgizmo  rcgen
build-cmake-ci/plugingui/: resource_data.cc
build-cmake-ci/test/: CTestTestfile.cmake  atomictest  audiocache  audiocacheeventhandler  audiocachefile  audiocacheidmanager  bytesizeparsertest  cmake_install.cmake  configfile  configparsertest  dgxmlparsertest  domloadertest  drumkitcreatortest  enginetest  eventsdstest  imagecachetest  midimapparsertest  midimappertest  notifiertest  paintertest  powermaptest  randomtest  resource  result_atomictest.xml  result_audiocache.xml  result_audiocacheeventhandler.xml  result_audiocachefile.xml  result_audiocacheidmanager.xml  result_bytesizeparsertest.xml  result_configfile.xml  result_configparsertest.xml  result_dgxmlparsertest.xml  result_domloadertest.xml  result_drumkitcreatortest.xml  result_enginetest.xml  result_eventsdstest.xml  result_imagecachetest.xml  result_midimapparsertest.xml  result_midimappertest.xml  result_notifiertest.xml  (+8 more)
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  config.h
build2/test/: CTestTestfile.cmake  atomictest  audiocachefile  audiocacheidmanager  bytesizeparsertest  cmake_install.cmake  colourtest  configfile  configparsertest  dgxmlparsertest  directorytest  drumgizmoclitest  drumkitcreatortest  eventsdstest  framesizetest  inputfilterstest  midimapparsertest  (+9 more)
cmake/: config.h.cmake.in  dependencies.cmake
dggui/: button.cc  button.h  button_base.cc  button_base.h  checkbox.cc  checkbox.h  colour.h  combobox.cc  combobox.h  eventhandler.cc  font.cc  font.h  frame.cc  frame.h  guievent.h  helpbutton.cc  helpbutton.h  image.cc  image.h  knob.cc  knob.h  label.cc  label.h  layout.cc  layout.h  led.cc  led.h  lineedit.cc  lineedit.h  listbox.cc  listbox.h  listboxbasic.cc  listboxbasic.h  listboxthin.cc  listboxthin.h  nativewindow.h  nativewindow_cocoa.h  nativewindow_cocoa.mm  nativewindow_headless.cc  nativewindow_headless.h  (+33 more)
docs/: assertion-quality-checklist.md  coverage-top20-file-gaps.md  coverage.md  high-risk-test-backlog.md  test-authoring-guidelines.md
drumgizmo/: .gitignore  Makefile.am  alsapcmwrapper.h  alsaseqwrapper.h  audioinputenginedl.cc  audioinputenginedl.h  audiooutputenginedl.cc  audiooutputenginedl.h  dgvalidator.cc  drumgizmoc.cc  enginefactory.cc  enginefactory.h  jackclient.cc  jackclient.h  osswrapper.h
openness_crocellkit/: CrocellKit_tiny_openness.xml  HihatContinuous.xml  MIDI-Drums.mid  Midimap_tiny_openness.xml  README  hihat_test_tool.py
plugin/: Makefile.mingw32.in  configstringio.cc  configstringio.h  drumgizmo_plugin.cc  drumgizmo_plugin.h
plugingui/: Makefile.am  Makefile.am.plugingui  abouttab.cc  abouttab.h  bleedcontrolframecontent.h  colour.cc  colour.h  dgwindow.cc  diskstreamingframecontent.h  drumkitframecontent.h  drumkitimage.cc  drumkitimage.h  drumkittab.cc  drumkittab.h  filebrowser.cc  filebrowser.h  humaniservisualiser.cc  humaniservisualiser.h  humanizerframecontent.cc  knob.cc  lineedit.cc  maintab.cc  mainwindow.cc  mainwindow.h  nativewindow_cocoa.mm  painter.cc  painter.h  plugingui.cc  plugingui.h  powerwidget.cc  powerwidget.h  resamplingframecontent.cc  resamplingframecontent.h  sampleselectionframecontent.cc  sampleselectionframecontent.h  scrollbar.cc  statusframecontent.h  tabs.cc  tabs.h  textedit.cc  (+4 more)
scripts/: advance-ratchet.py  check-coverage.py  check-pr-coverage.py  generate-coverage-gap-report.py
src/: DGDOM.h  Makefile.am  atomic.h  audiocache.h  audiocacheeventhandler.h  audiofile.cc  audiofile.h  audioinputengine.h  audioinputenginemidi.cc  audioinputenginemidi.h  audiooutputengine.h  channel.cc  channel.h  configfile.h  cpp11fix.h  curvemap.cc  curvemap.h  dgxmlparser.cc  directory.cc  directory.h  domloader.cc  doubletriggerfilter.cc  doubletriggerfilter.h  drumgizmo.cc  drumkit.cc  drumkit.h  drumkitloader.cc  drumkitloader.h  drumkitparser.cc  drumkitparser.h  engineevent.h  event.h  events.h  events_ds.h  grid.h  id.h  inputprocessor.cc  inputprocessor.h  instrument.cc  instrument.h  (+37 more)
test/: CMakeLists.txt  Makefile.am  alsamidiinputenginetest.cc  alsaoutputenginetest.cc  atomictest.cc  audiocacheeventhandlertest.cc  audiocachefiletest.cc  audiocacheidmanagertest.cc  audiocachetest.cc  audiofiletest.cc  audioinputenginemiditest.cc  bytesizeparsertest.cc  channelmixertest.cc  clitestutils.h  colourtest.cc  configparsertest.cc  configtest.cc  curvemaptest.cc  dggui_widgettest.cc  dgvalidatortest.cc  dgxmlparsertest.cc  directorytest.cc  doctest_main.cc  domloadertest.cc  drumgizmoclitest.cc  drumgizmoconftest.cc  drumgizmointegrationtest.cc  drumgizmotest.cc  drumkit_creator.cc  drumkit_creator.h  drumkitcreatortest.cc  drumkittabtest.cc  drumkittest.cc  dummyinputenginetest.cc  dummyoutputenginetest.cc  enginefactorytest.cc  enginetest.cc  eventhandlertest.cc  eventsdstest.cc  filebrowsertest.cc  (+46 more)
test/dgreftest/: dgreftest.cc  midiinputengine.cc
test/uitests/: Makefile.am  framewidgettest.cc  powerwidgettest.cc  resizetest.cc  tabwidgettest.cc
tools/: add_file
(+221 files in other folders)
